Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -15,3 +15,18 @@ div {
 #orange{
   border-top-color:#ffa500;
 }
+#yellow{
+  border-top-color:#ffa500;
+}
+#orange{
+  border-top-color:#ffa500;
+}
+#orange{
+  border-top-color:#ffa500;
+}
+#orange{
+  border-top-color:#ffa500;
+}
+#orange{
+  border-top-color:#ffa500;
+}
