Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -16,9 +16,9 @@ div {
   border-top-color:#ffa500;
 }
 #yellow{
-  border-top-color:#ffa500;
+  border-top-color:#ff0;
 }
-#orange{
+#green{
   border-top-color:#ffa500;
 }
 #orange{
