Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -19,9 +19,9 @@ div {
   border-top-color:#ff0;
 }
 #green{
-  border-top-color:#ffa500;
+  border-top-color:#00bc3f;
 }
-#orange{
+#blue{
   border-top-color:#ffa500;
 }
 #orange{
