--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ div {
   border-top-color:#00bc3f;
 }
 #blue{
-  border-top-color:#ffa500;
+  border-top-color:#06f;
 }
 #orange{
   border-top-color:#ffa500;
