Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -25,8 +25,8 @@ div {
   border-top-color:#06f;
 }
 #indigo{
-  border-top-color:#ffa500;
+  border-top-color:#8a2be2;
 }
-#orange{
+#violet{
   border-top-color:#ffa500;
 }
